--- a/index.html
+++ b/index.html
@@ -4,7 +4,45 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header__navbar">
+        <ul class="navbar__list">
+          <li class="navbar__item active"><a href="#">главная</a></li>
+          <li class="navbar__item">
+            <a href="#">посмотреть лоты</a>
+          </li>
+          <li class="navbar__item">
+            <a href="#"> об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a href="#">
+        <img class="header__logo" src="./images/logo-black.svg" />
+      </a>
+      <div class="header__contacts">
+        <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <address class="contacts__address"
+          >наб. Принсенграхт 263- 265, Амстердам</span
+        >
+      </div>
+    </header>
+    <main>
+        <section class="cover">
+          <div class="overlay">
+          <h1 class="cover__title">
+            <span class="aligned-text">оно</span>
+            <span class="aligned-text_center">тебе</span>
+            <span class="aligned-text_right">надо</span>
+          </h1>
+        </div>
+        </section>
+    </main>
+  </body>
 </html>
