fix: Правки ревьюера 2

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
           </span>
         </h1>
         <div class="cover__description">
-          <span class="cover__decsription-text">
+          <p class="cover__decsription-text">
             Аукцион вещей,
             <span class="word-spacing-extended">в которые никто не верил</span>
-          </span>
+          </p>
             <button class="bet-button">Сделать ставку</button>
         </div>
     </section>
